added moment js/5 day forecast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,6 @@ header h1 {
     outline: none;
     background-color: darkorange;
     box-shadow: 3px 3px grey;
-    /* transform: translate(-1px, -1px); */
   }
 
 .justify-space-between {
@@ -100,7 +99,7 @@ main {
 #results-container {
     width: 600px;
 }
-
+/* display data for cities */
 .data-container {
     border: 2px solid black;
     padding: 15px;
@@ -109,20 +108,46 @@ main {
     margin: 10px 0 0 25px;
     
   }
-
+#main-data {
+    font-size: 25px;
+    font-weight: bolder;
+    margin: 10px 0;
+}
   .data-container box {
     display: flex;
     flex-direction: column;
     margin: 10px 0px 10px 0px;
   }
 
+  .favorable {
+    background-color: green;
+    color: white;
+    border-radius: .3rem;
+    margin: 0px 405px 0px 0px;
+  }
+
+  .moderate {
+    background-color: #f1e714;
+    color:white;
+    border-radius: .3rem;
+    margin: 0px 405px 0px 0px;
+  }
+
+  .severe {
+    background-color: red;
+    color: white;
+    border-radius: .3rem;
+    margin: 0px 405px 0px 0px;
+  }
+
+/* Display data for 5-Day Forecast */
 .flex-row {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.forcast {
+.forecast {
     display: block;
     margin-top: 25px;
     text-align: center;
@@ -132,12 +157,13 @@ main {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    font-size: 15px;
 }
 
-.forcast-block {
+.forecast-block {
     background-color: orange;
-    width: 90px;
-    height: 100px;
-    margin: 11px;
+    width: 100px;
+    height: 150px;
+    margin: 7px;
 }
 
